2008-12-22  Kurt Biery <biery@fnal.gov>

	* tag V04-02-01
	* Fixed the ChangeLog.

2008-12-22  Kurt Biery <biery@fnal.gov>

	* tag V04-02-00
	* Moved the collection of INIT message fragments from the
	  SMFUSender* classes to the FragmentCollector.
	* Improved fragment collection - allowed fragments out of order,
	  checked for duplicate fragments, checked for incomplete events.
	* Modified the DQM archive filenames to better match the format
	  used by the online consumers.
	* Added support for reconfigurations between runs.
	* Brought forward the additional event statistics from Harry.
	* Included the fix for the spurious discard messages sent to the
	  resource broker.
	* Converted the SM to use Python configuration files, and added
	  sample Python configuration files to test subdirectory.

2008-11-21  Kurt Biery <biery@fnal.gov>

	* tag V04-01-01
	* Added a necessary call to the state machine findRcmsStateListener
	  method in StorageManager.cc after the RCMS parameters are added
	  to the application infospace.

2008-11-26  Peter Elmer <Peter.Elmer@cern.ch>

	* tag V04-01-00-01
	* Removed Foundation/SealBase dependence in test area BuildFile.

2008-10-24  Constantin Loizides <loizides@mit.edu>

	* tag V04-01-00
	* Added calculation of adler32 checksums for streamer and
	  index files, and storage of them in the log files.
	* These changes depend on the following related tags:
	  IOPool/Streamer            V05-05-00

2008-10-22  Constantin Loizides <loizides@mit.edu>

	* tag V04-00-02
	* (CL) Fixed loop over logical disks on SM default web page.
	* (KB) Modified the writing of DQM histograms to disk - all
	  top-level folders are now written to the same file (for a
	  given update), and the directory structure was modified to
	  match what is used in DQM archives created by event consumers.

2008-10-14  Kurt Biery <biery@fnal.gov>

	* tag V04-00-01
	* Added protection to the actionPerformed() method to prevent